feel free to comment!!!

--- a/portofolio.html
+++ b/portofolio.html
@@ -116,3 +116,5 @@
 <footer id="footer" class="footer">This is my portofolio page <a href="#portofolio.html">Catalin Costache designed in 2022</a></footer>
 </body>
 </html>
+
+<!-- Please feel free to comment on this so i can learn! Thank you!!!-->
