--- a/portofolio.html
+++ b/portofolio.html
@@ -113,7 +113,9 @@
     </article>
 </section>
 </main>
-<footer id="footer" class="footer">This is my portofolio page <a href="#portofolio.html">Catalin Costache designed in 2022</a></footer>
+<div id="footer" class="footer">
+  <p>This is <a href="#portofolio.html">Catalin Costache's</a>portofolio page designed in 2022</p>
+</div>
 </body>
 </html>
 
