--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <section class="welcome-section" id="welcome-section">
     <article>
     <h1>Catalin Costache</h1>
-    <p class="description">Learning web developing</p>
+    <p class="description">Learning web development</p>
     </article>
 </section>
 <section class="second-section" id="projects">
