--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initaial-scale=1.0" />
 <link rel="stylesheet" href="styles.css">
  <link
       rel="stylesheet"
@@ -110,11 +111,20 @@
           target="_blank"
           class="btn contact-details"
           ><i class="fab fa-instagram"></i> Instagram</a>
+        </article>
+        </section>
+<section class="fourth-section" id="textwrite">
+    <article>
+          <div class="write">
+            <textarea class="writeme" name="write_me" cols="80" rows="10" placeholder="I wait hearing from you!"></textarea>
+            <input class="submitbutton" type="submit" name="submit" value="Send!"/>
+          </div>
+          <!-- button for text area here-->
     </article>
-</section>
+  </section>
 </main>
 <div id="footer" class="footer">
-  <p>This is <a href="#portofolio.html">Catalin Costache's</a>portofolio page designed in 2022</p>
+  <p>This is <a href="#portofolio.html">Catalin Costache's</a> portfolio page designed in 2022</p>
 </div>
 </body>
 </html>
