--- a/index.html
+++ b/index.html
@@ -1,132 +1,314 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initaial-scale=1.0" />
-<link rel="stylesheet" href="styles.css">
- <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
-      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
-      crossorigin="anonymous"
-    />
-<title>Catalin Costache</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initaial-scale=1.0" />
+
+  <!-- Fontawesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+    integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous" />
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+  <!-- My Own CSS -->
+  <link rel="stylesheet" href="styles.css">
+
+  <title>Catalin Costache</title>
 </head>
+
 <header>
-    <nav id="navbar" class="nav">
-        <ul class="nav-list">
-            <li>
-                <a class="nav-link" id="link" href="#welcome-section">About</a>
-            </li>
-            <li>
-                <a class="nav-link" id="link" href="#projects">Work</a>
-            </li>
-            <li>
-                <a class="nav-link" id="link" href="#Contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
-    </header>
-    <body>
-<main id="main-doc">
-<section class="welcome-section" id="welcome-section">
-    <article>
-    <h1>Catalin Costache</h1>
-    <p class="description">Learning web developing</p>
-    </article>
-</section>
-<section class="second-section" id="projects">
-    <article>
+  <nav id="navigation-bar" class="nav">
+    <ul class="nav-list">
+      <li>
+        <div class="dark-mode">
+          <input type="checkbox" class="checkbox" id="checkbox">
+          <label for="checkbox" class="label">
+            <div class="ball"></div>
+          </label>
+        </div>
+      </li>
+      <li>
+        <a class="nav-link" id="link" href="#welcome-section">About</a>
+      </li>
+      <li>
+        <a class="nav-link" id="link" href="#projects">Projects</a>
+      </li>
+      <li>
+        <a class="nav-link" id="link" href="#Contact">Contact</a>
+      </li>
+    </ul>
+  </nav>
+</header>
+
+<body>
+
+  <!-- Scripts -->
+  <script src="script.js" charset="utf-8"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+    integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"
+    integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD"
+    crossorigin="anonymous"></script>
+
+  <main id="main-doc">
+    <section class="welcome-section" id="welcome-section">
+      <img class="welcome-logo" src="images\logo-black.png" alt="Logo">
+      <article class="description-wrap">
+        <h1>About Me:</h1>
+        <p class="description">Learning web development in progress...</p>
+      </article>
+    </section>
+    <section class="second-section" id="projects">
+      <article>
         <h2>Here are some of my projects</h2>
-        <div class="projects-grid">
-            <a
-              href="C:\Lectii HTML\portofolio\projects\2\build-a-survey-form.html"
-              target="_blank"
-              class="project project-tile"
-            >
-              <img
-                class="project-image1"
-                src="C:\Lectii HTML\portofolio\projects\registrationform.jpg"
-                alt="project"
-              />
-              <p class="project-title">Survey Form</p>
-            </a>
-            <a
-              href="C:\Lectii HTML\portofolio\projects\1\build-a-technical.html"
-              target="_blank"
-              class="project project-tile"
-            >
-              <img
-                class="project-image2"
-                src="C:\Lectii HTML\portofolio\projects\technicalform.jpg"
-                alt="project"
-              />
-              <p class="project-title">Technical CSS</p>
-            </a>
-            <a
-              href="C:\Lectii HTML\portofolio\projects\3\product.html"
-              target="_blank"
-              class="project project-tile"
-            >
-              <img
-                class="project-image3"
-                src="C:\Lectii HTML\portofolio\projects\keyboard.jpg"
-                alt="project"
-              />
-              <p class="project-title">Product</p>
-            </a>
-            <a
-              href="C:\Lectii HTML\portofolio\projects\4\magazine.html"
-              target="_blank"
-              class="project project-tile"
-            >
-              <img
-                class="project-image4"
-                src="C:\Lectii HTML\portofolio\projects\magazine.jpg"
-                alt="project"
-              />
-              <p class="project-title">Magazine</p>
-            </a>
-    </article>
-</section>
-<section class="third-section" id="Contact">
-    <article>
+
+        <!-- Carousel -->
+        <div id="carouselLargeScreen" class="carousel slide carousel-dark  d-none d-sm-block" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselLargeScreen" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselLargeScreen" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselLargeScreen" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\registrationform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Simple Registration Form</h5>
+                    <p class="card-text">A simple registration form using HTML and CSS made when I was learning on
+                      FreeCodeCamp</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\technicalform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Technical Form</h5>
+                    <p class="card-text">Also a project from FreeCodeCamp learning by doing.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\keyboard.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Product Page</h5>
+                    <p class="card-text">Simple product page made while learning basics. </p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\magazine.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">FreeCodeCamp Magazine Project</h5>
+                    <p class="card-text">Learning CSS on this one.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\technicalform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                      of the card's content.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\keyboard.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                      of the card's content.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\registrationform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                      of the card's content.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\technicalform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                      of the card's content.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\keyboard.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                      of the card's content.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselLargeScreen"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselLargeScreen"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+        <div id="carouselSmallScreen" class="carousel slide carousel-dark d-block d-sm-none" data-bs-ride="carousel">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselSmallScreen" data-bs-slide-to="0" class="active"
+              aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselSmallScreen" data-bs-slide-to="1"
+              aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselSmallScreen" data-bs-slide-to="2"
+              aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselSmallScreen" data-bs-slide-to="3"
+              aria-label="Slide 4"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\registrationform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Simple Registration Form</h5>
+                    <p class="card-text">A simple registration form using HTML and CSS made when I was learning on
+                      FreeCodeCamp</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\technicalform.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Technical Form</h5>
+                    <p class="card-text">Also a project from FreeCodeCamp learning by doing.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\magazine.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">FreeCodeCamp Magazine Project</h5>
+                    <p class="card-text">Learning CSS on this one.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" data-bs-interval="2500">
+              <div class="cards-wrapper">
+                <div class="card">
+                  <div class="image-wrapper">
+                    <img src="images\keyboard.jpg" alt="...">
+                  </div>
+                  <div class="card-body">
+                    <h5 class="card-title">Product Page</h5>
+                    <p class="card-text">Simple product page made while learning basics.</p>
+                    <a href="#" class="btn btn-outline-secondary">Go to page</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselSmallScreen"
+            data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselSmallScreen"
+            data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </article>
+    </section>
+    <section class="third-section" id="Contact">
+      <article>
         <h3>You can Contact me here</h3>
         <div class="contact-links">
-          <a
-            href="https://facebook.com/Alecs.ct"
-            target="_blank"
-            class="btn contact-details"
-            ><i class="fab fa-facebook-square"></i> Facebook</a
-          >
-          <a
-          id="profile-link"
-          href="https://github.com/Costache1"
-          target="_blank"
-          class="btn contact-details"
-          ><i class="fab fa-github"></i> GitHub</a
-        >
-        <a
-          href="https://instagram.com/alecs_c1"
-          target="_blank"
-          class="btn contact-details"
-          ><i class="fab fa-instagram"></i> Instagram</a>
-        </article>
-        </section>
-<section class="fourth-section" id="textwrite">
-    <article>
-          <div class="write">
-            <textarea class="writeme" name="write_me" cols="80" rows="10" placeholder="I wait hearing from you!"></textarea>
-            <input class="submitbutton" type="submit" name="submit" value="Send!"/>
-          </div>
-          <!-- button for text area here-->
-    </article>
-  </section>
-</main>
-<div id="footer" class="footer">
-  <p>This is <a href="#portofolio.html">Catalin Costache's</a> portfolio page designed in 2022</p>
-</div>
+          <a href="https://facebook.com/Alecs.ct" target="_blank" class="btn contact-details"><i
+              class="fab fa-facebook-square"></i> Facebook</a>
+          <a id="profile-link" href="https://github.com/Costache1" target="_blank" class="btn contact-details"><i
+              class="fab fa-github"></i> GitHub</a>
+          <a href="https://instagram.com/alecs_c1" target="_blank" class="btn contact-details"><i
+              class="fab fa-instagram"></i> Instagram</a>
+      </article>
+    </section>
+    <section class="fourth-section" id="textwrite">
+      <article>
+        <div class="write">
+          <textarea id="writeme" class="writeme" name="write_me" cols="80" rows="10"
+            placeholder="I would like to hear from you!"></textarea>
+          <input class="submitbutton" type="submit" name="submit" value="Send!" />
+        </div>
+        <!-- button for text area here-->
+      </article>
+    </section>
+  </main>
+  <div id="footer" class="footer">
+    <p>This is <a href="#index.html">Catalin Costache's</a> portfolio page designed in 2022</p>
+  </div>
+
 </body>
+
 </html>
 
 <!-- Please feel free to comment on this so i can learn! Thank you!!!-->
